# redb

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/redb-bench/: Cargo.toml
crates/redb-bench/benches/: common.rs  lmdb_benchmark.rs
crates/redb-derive/src/: lib.rs
crates/redb-derive/tests/: derive_tests.rs
docs/: lmdb-comparison.md
examples/: derive_macro.rs
fuzz/fuzz_targets/: fuzz_redb.rs
redb-derive/: Cargo.toml  README.md
redb-derive/src/: lib.rs
redb-derive/tests/: comprehensive_tests.rs  debug_manual.rs  debug_test.rs  derive_tests.rs  integration_tests.rs  minimal_test.rs  simple_test.rs  single_field_test.rs  two_field_test.rs  unit_test.rs
redb_derive/: Cargo.toml
redb_derive/src/: lib.rs
src/: db.rs  lib.rs  multimap_table.rs  table.rs  transaction_tracker.rs  transactions.rs  tuple_types.rs  types.rs
src/tree_store/: btree.rs  btree_base.rs  btree_iters.rs  btree_mutator.rs  extract.rs  extract_if.rs  mod.rs  retain.rs  subtree_rebuild.rs  table_tree.rs
src/tree_store/page_store/: base.rs  cached_file.rs  concurrent_cache.rs  header.rs  lru_cache.rs  mod.rs  page_manager.rs
tests/: basic_tests.rs  derive_tests.rs  integration_tests.rs
