[package]
name = "redb-derive"
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
description = "Procedural macros for redb"
license = "MIT OR Apache-2.0"
authors = ["Christopher Berner <me@cberner.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
redb = { path = "..", features = ["derive"] }
tempfile = "3.5.0"
